feat: event partitions are now views [DHIS2-14222]